--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "dev": "nodemon --exec ts-node index.ts",
-    "start": "node index.ts"
+    "start": "ts-node index.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "ioredis": "^5.4.2",
     "node-fetch": "^3.3.2",
     "openai": "^4.104.0",
+    "ts-node": "^10.9.2",
     "zod": "^4.1.11"
   },
   "devDependencies": {
