--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "topojson-client": "^3.1.0",
     "tss-react": "^4.9.19",
     "vite-plugin-cesium": "^1.2.23",
-    "zod": "^4.1.11"
+    "zod": "^4.1.11",
+    "firebase": "^11.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
